src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>IT_Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IT_Desciption__c</fullName>
        <label>Desciption</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IT_Question__c</fullName>
        <description>Question for FAQ</description>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>All_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Articles</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>CREATED_DATE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>IT_Question__c</columns>
        <columns>LANGUAGE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Free_Text</fullName>
        <active>true</active>
        <description>This can be used for insert a free text with attachment file.</description>
        <label>Free Text</label>
    </recordTypes>
</CustomObject>